更新忽略文件夹

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,20 @@ local.properties
 .project
 .class
 
+.metadata
+.recommenders
+Servers
+RemoteSystemsTempFiles
+/Servers
+/RemoteSystemsTempFiles
+/.metadata
+/.recommenders
+=======
+.metadata
+.recommenders
+Servers
+RemoteSystemsTempFiles
+
 # External tool builders
 .externalToolBuilders/
 
