--- a/netMVC01/WebContent/WEB-INF/web.xml
+++ b/netMVC01/WebContent/WEB-INF/web.xml
@@ -10,7 +10,20 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <error-page>
-  	<error-code>404</error-code>
-  	<location>/day03/error.jsp</location>
+    <error-code>404</error-code>
+    <location>/day03/error.jsp</location>
   </error-page>
+  
+  <servlet>
+  	<servlet-name>zhangsan</servlet-name>
+  	<servlet-class>cn.pzhu.net.controller.LoginServlet</servlet-class>
+  </servlet>
+	<servlet-mapping>
+		<servlet-name>zhangsan</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+  	
+
+
+  
 </web-app>
