--- a/netMVC01/WebContent/WEB-INF/web.xml
+++ b/netMVC01/WebContent/WEB-INF/web.xml
@@ -13,17 +13,17 @@
     <error-code>404</error-code>
     <location>/day03/error.jsp</location>
   </error-page>
-  
   <servlet>
-  	<servlet-name>zhangsan</servlet-name>
-  	<servlet-class>cn.pzhu.net.controller.LoginServlet</servlet-class>
+    <servlet-name>zhangsan</servlet-name>
+    <servlet-class>cn.pzhu.net.controller.LoginServlet</servlet-class>
+    <init-param>
+    	<param-name>coding</param-name>
+    	<param-value>UTF-8</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
   </servlet>
-	<servlet-mapping>
-		<servlet-name>zhangsan</servlet-name>
-		<url-pattern>/login</url-pattern>
-	</servlet-mapping>
-  	
-
-
-  
+  <servlet-mapping>
+    <servlet-name>zhangsan</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
 </web-app>
