--- a/softwareMVC01/WebContent/WEB-INF/web.xml
+++ b/softwareMVC01/WebContent/WEB-INF/web.xml
@@ -9,10 +9,20 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
   <error-page>
-  	<error-code>404</error-code>
-  	<location>/day03/404.jsp</location>
+    <error-code>404</error-code>
+    <location>/day03/404.jsp</location>
   </error-page>
+  
+  <servlet>
+  	<servlet-name>Login</servlet-name>
+  	<servlet-class>cn.edu.pzhu.sw.controller.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>Login</servlet-name>
+  	<url-pattern>/lisi</url-pattern>
+  </servlet-mapping>
+  
+  
   
 </web-app>
