--- a/netMVC01/WebContent/WEB-INF/web.xml
+++ b/netMVC01/WebContent/WEB-INF/web.xml
@@ -17,13 +17,36 @@
     <servlet-name>zhangsan</servlet-name>
     <servlet-class>cn.pzhu.net.controller.LoginServlet</servlet-class>
     <init-param>
-      	<param-name>coding</param-name>
-      	<param-value>UTF-8</param-value>
-   	</init-param>
+      <param-name>coding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
     <servlet-name>zhangsan</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
+   <filter>
+  	<filter-name>AAA</filter-name>
+  	<filter-class>cn.pzhu.net.filter.AAAFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>AAA</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter>
+  	<filter-name>ZZZ</filter-name>
+  	<filter-class>cn.pzhu.net.filter.ZZZFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>ZZZ</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+   
+  
+  
+  
+  
+  
+  
 </web-app>
