--- a/softwareMVC01/WebContent/WEB-INF/web.xml
+++ b/softwareMVC01/WebContent/WEB-INF/web.xml
@@ -13,16 +13,28 @@
     <error-code>404</error-code>
     <location>/day03/404.jsp</location>
   </error-page>
-  
   <servlet>
-  	<servlet-name>Login</servlet-name>
-  	<servlet-class>cn.edu.pzhu.sw.controller.LoginServlet</servlet-class>
+    <servlet-name>Login</servlet-name>
+    <servlet-class>cn.edu.pzhu.sw.controller.LoginServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>Login</servlet-name>
-  	<url-pattern>/lisi</url-pattern>
+    <servlet-name>Login</servlet-name>
+    <url-pattern>/lisi</url-pattern>
   </servlet-mapping>
-  
-  
-  
+  <filter>
+    <filter-name>test3</filter-name>
+    <filter-class>cn.edu.pzhu.sw.filter.BBBFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>test3</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter>
+    <filter-name>test2</filter-name>
+    <filter-class>cn.edu.pzhu.sw.filter.Test2Filter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>test2</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
