--- a/softwearMVC02/WebContent/WEB-INF/web.xml
+++ b/softwearMVC02/WebContent/WEB-INF/web.xml
@@ -13,13 +13,36 @@
     <error-code>404</error-code>
     <location>/day03/404.jsp</location>
   </error-page>
-  
   <servlet>
-  	<servlet-name>Login</servlet-name>
-  	<servlet-class>cn.edu.pzhu.sw.controller.LoginServlet</servlet-class>
+    <servlet-name>Login</servlet-name>
+    <servlet-class>cn.edu.pzhu.sw.controller.LoginServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>Login</servlet-name>
-  	<url-pattern>/lisi</url-pattern>
+    <servlet-name>Login</servlet-name>
+    <url-pattern>/lisi</url-pattern>
   </servlet-mapping>
+  <filter>
+    <filter-name>test</filter-name>
+    <filter-class>cn.edu.pzhu.sw.filter.TestFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>test</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter>
+    <filter-name>test3</filter-name>
+    <filter-class>cn.edu.pzhu.sw.filter.AAAFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>test3</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter>
+    <filter-name>test2</filter-name>
+    <filter-class>cn.edu.pzhu.sw.filter.ZZZFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>test2</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
